[package]
name = "benlnurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
log = "0.4.20"
reqwest = "0.11.22"
rusqlite = "0.29.0"
serde = "1.0.188"
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = ["sqlite", "macros"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.0"
tonic_lnd = { git = "https://github.com/Synota-io/tonic_lnd.git" }
